@@ -18,6 +18,11 @@ Core and Builtins
 Library
 -------
 
+- Issue #14315: The zipfile module now ignores extra fields in the central
+  directory that are too short to be parsed instead of letting a struct.unpack
+  error bubble up as this "bad data" appears in many real world zip files in
+  the wild and is ignored by other zip tools.
+
 - Issue #21402: tkinter.ttk now works when default root window is not set.
 
 - Issue #10203: sqlite3.Row now truly supports sequence protocol.  In particulr
